@@ -109,11 +109,11 @@ public class AccessControlPermission extends AccessControlPermission_Base implem
         return "permission(" + getCode() + ")";
     }
 
-    public Boolean isRestricted() {
-        return getRestricted();
+    public boolean isRestricted() {
+        return Boolean.TRUE.equals(getRestricted());
     }
 
-    public Boolean isAutoGenerated() {
+    public boolean isAutoGenerated() {
         return Boolean.TRUE.equals(getAutoGenerated());
     }
 
