@@ -1,3 +1,5 @@
+- Refactor: Makes isRestricted and isAutoGenerated methods in AccessControlPermission return boolean [#qubIT-Omnis-7088]
+
 2.4.0 (17-10-2024)
 - New feature: Adds description field to AccessControlPermission and AccessControlProfile entities [#qubIT-Omnis-6987]
 
